<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/select"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/activityThirdSpnCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/category_edit_shape"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <EditText
        android:id="@+id/edtMovieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:autofillHints="@string/movie_name"
        android:background="@drawable/category_edit_shape"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:paddingVertical="5dp"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        tools:text="@string/movie_name" />

    <Button
        android:id="@+id/btnAddMovieName"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="@string/add"
        android:background="@drawable/button_shape"
        android:textAllCaps="false"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="@string/finish"
        android:background="@drawable/button_shape"
        android:textAllCaps="false"
        android:textSize="25sp" />
</LinearLayout>