<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".FourthActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/select"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/activityFourthSpnCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/category_edit_shape"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <EditText
        android:id="@+id/activityFourthEdtMovieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="40dp"
        android:hint="@string/key_word"
        android:background="@drawable/category_edit_shape"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:paddingVertical="5dp"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        tools:text="@string/key_word"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/search"
        android:background="@drawable/button_shape"
        android:textAllCaps="false"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="80dp"
        android:text="@string/result"
        android:textSize="25sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvResult"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        tools:listitem="@layout/item_result" />

</LinearLayout>