<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <EditText
        android:id="@+id/edtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="80dp"
        android:autofillHints="@string/movie_category"
        android:background="@drawable/category_edit_shape"
        android:ems="9"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:paddingVertical="5dp"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        tools:text="@string/movie_category" />

    <Button
        android:id="@+id/btnAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="76dp"
        android:text="@string/add"
        android:background="@drawable/button_shape"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@+id/edtCategory"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:paddingHorizontal="10dp"
        android:textSize="25sp"
        android:background="@drawable/button_shape"
        android:text="@string/add_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>